--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -72,7 +72,7 @@ To help the understanding, I attached Figure 1 that illustrates the above estima
  By choosing appropriate rate of $$\lambda$$, the $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is biased. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is so-called a NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only guarantee the global minimizer, but also can be solved by a rich amount of reliable optimization algorithms, for example [the coordinate descent algorithms](https://arxiv.org/pdf/0803.3876.pdf), [the ADMM](http://arxiv.org/pdf/1208.3922v3.pdf), [the proximal algorithms](https://web.stanford.edu/~boyd/papers/pdf/prox_algs.pdf), and etc. For linear regression models with $$L_1$$ penalty (LASSO), [the Least Angle RegreSsion (LARS)](https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf) algorithm provides a very fast and scalable computation. I will discuss the details in following posts.    
  
  
-#### $$L_2$$ penalties are still important in many cases. 
+#### $$L_2$$ penalties are still useful in many settings. 
 
 During the late 1950s,  statisticians got shocked by the introduction of an estimator called [James-Stein (JS) estimator](https://en.m.wikipedia.org/wiki/James–Stein_estimator). The reason was that under mild conditions the risk of the JS estimator is uniformly lower than that of the MLE in Gaussian sequence models, and it turned out that the JS estimator is a kind of $$L_2$$ penalized likelihood estimator. This is demonstrated again in [Efron and Morris (1973)](http://faculty.chicagobooth.edu/nicholas.polson/teaching/41900/efron-morris2.pdf) and  [Efron and Morris (1977)](http://statweb.stanford.edu/~ckirby/brad/other/Article1977.pdf), and  it is interpreted as an empirical Bayes estimator with a legendary example about bases batting rates.
 
