--- a/_posts/2016-07-04-170015.markdown
+++ b/_posts/2016-07-04-170015.markdown
@@ -8,7 +8,7 @@ Recently one of my friends asked me a question about the previous post "How to p
 
 >Even though Gaussian tails hurt the optimal minimax rate of posterior contraction, it is ok when we only consider model selections.
 
-He asked me why priors with Gaussian tail that decays square-exponential rate, i.e., $$-\log\pi(\theta)\propto O(\theta^2)$$. 
+He asked me why priors with Gaussian tail that decays square-exponential rate, i.e., $$-\log\pi(\theta)= O(\theta^2)$$. 
 
 
 
