--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -6,6 +6,10 @@ comments: true
 
 Recently, one of my friends asked me a question about the previous post "[How to prove the  Bayesian Model Selection Consistency in Linear Models for High-dimensional Settings]({% post_url 2016-06-14-213921%})". He was wondering the following statement in the post.
 
+>Even though Gaussian tails hurt the optimal minimax rate of posterior contraction, it is ok when we only consider model selections.
+
+He asked me why the use of priors with Gaussian tails hurt the optimal posterior contraction rate. A density with a Gaussian tail refers to a density function that decays a square-exponential rate, i.e., 
+
 
 
 
