--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -25,7 +25,14 @@ E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& E_{\theta_0}[(\theta_0-\bar y
 \end{eqnarray*}
 $$
 
-where $$\theta_0$$ is the true parameter that involves in the data-generating process and $$E_{\theta_0}(\cdot)$$ refers to the expectation operator corresponding to $$\theta_0$$.
+where $$\theta_0$$ is the true parameter that involves in the data-generating process and $$E_{\theta_0}(\cdot)$$ refers to the expectation operator corresponding to $$\theta_0$$. Therefore, the resulting supremum of the risk with respect to $$\theta_0$$ is 
+
+$$
+\begin{eqnarray*}
+\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1}{n(n+\tau^2)}+\sup_{\theta_0}\left(\frac{\theta_0^2}{n+\tau^2} \right)\\
+&=& \infty.
+\end{eqnarray*}
+$$
 
 
 
