--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -29,7 +29,7 @@ where $$\theta_0$$ is the true parameter that involves in the data-generating pr
 
 $$
 \begin{eqnarray*}
-\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1}{n(n+\tau^2)}+\sup_{\theta_0}\left(\frac{\theta_0^2}{n+\tau^2} \right)\\
+\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1}{n(n+\tau^2)^2}+\sup_{\theta_0}\left(\frac{\theta_0^2}{n+\tau^2} \right)\\
 &=& \infty.
 \end{eqnarray*}
 $$
