--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -29,12 +29,12 @@ where $$\theta_0$$ is the true parameter that involves in the data-generating pr
 
 $$
 \begin{eqnarray*}
-\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1}{n(n+\tau^2)^2}+\sup_{\theta_0}\left(\frac{\theta_0^2}{n+\tau^2} \right)\\
+\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1}{n(n+\tau^2)^2}+\sup_{\theta_0}\left(\frac{\theta_0^2}{(n+\tau^2)^2} \right)\\
 &=& \infty.
 \end{eqnarray*}
 $$
 
-The supremum of the $$L_2$$ risk is infinity, and the resulting minimax rate of the posterior contraction  fails to achieve the optimal rate. This result also can be applied to more general settings. That's why I mentioned in the previous post that Gaussian tails could hurt the minimax rate of the posterior contraction.
+The supremum of the $$L_2$$ risk is infinity, and the resulting minimax rate of the posterior contraction  fails to achieve the optimal rate. This result also can be applied to more general settings. That's why I mentioned in [the previous post]({% post_url 2016-06-14-213921%}) that Gaussian tails could hurt the minimax rate of the posterior contraction.
 
 On the other hand, when we consider priors that have tails at least as heavy as exponential distributions, i.e., $$-\log\pi(\theta)= O(\vert\theta\vert)$$, one can show that the resulting posterior mean satisfies the following:
 
