--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -61,7 +61,7 @@ To help the understanding, I attached Figure 1 that illustrates the above estima
 
 ![look at me](/assets/penalty2.pdf)
 
- It is clear that the $$L_2$$ penalized estimator (right) is not a sparse estimator, which could result in an exactly zero estimated value, since  the estimator $$\theta_{L_2}$$ is always non-zero unless the $$\bar y$$ is exactly zero. On the other hand, the $$L_0$$ (left) and $$L_1$$ (middle) penalized estimators are sparse in the sense that the resulting estimators could be exactly zero when the $$\vert \bar y \vert$$ is small enough. The $$L_0$$ penalized estimator is called a **hard-thresholding** estimator, since the estimated value keeps the $$\bar y$$, if the $$\vert\bar y\vert$$ is larger than a specificc threshold $$\lambda/n$$, and it becomes exactly zero, otherwise. One important feature of the hard-thresholding estimator is that the solution function is not continuous, and you can see the gap on the function in Figure 1 (left), at $$-(\lambda/n)^{1/2}$$ and $$(\lambda/n)^{1/2}$$. On the other hand, the $$L_1$$ estimator is called  **soft-thresholded**, and it is different from the $$L_0$$ estimator (hard-thresholded) in a sense that there always exists a bias of the estimator, which means that even when the $$\bar y$$ is far enough from zero the soft-thresholded estimator is differentiated from the $$\bar y$$. However, the $$L_0$$ penalized estimator is exactly equivalent to the $$\bar y$$ when $$\vert\bar y \vert\geq(\lambda/n)^{1/2}$$.
+ It is clear that the $$L_2$$ penalized estimator (right) is not a sparse estimator, which could result in an exactly zero estimated value, since  the estimator $$\theta_{L_2}$$ is always non-zero unless the $$\bar y$$ is exactly zero. On the other hand, the $$L_0$$ (left) and $$L_1$$ (middle) penalized estimators are sparse in the sense that the resulting estimators could be exactly zero when the $$\vert \bar y \vert$$ is small enough. The $$L_0$$ penalized estimator is called a **hard-thresholding** estimator, since the estimated value keeps the $$\bar y$$, if the $$\vert\bar y\vert$$ is larger than a specificc threshold $$\lambda/n$$, and it becomes exactly zero, otherwise. One important feature of the hard-thresholding estimator is that the solution function is not continuous, and you can see the gap on the function in Figure 1 (left), at $$-(\lambda/n)^{1/2}$$ and $$(\lambda/n)^{1/2}$$. On the other hand, the $$L_1$$ estimator is called  **soft-thresholding**, and it is different from the $$L_0$$ estimator (hard-thresholded) in a sense that there always exists a bias of the estimator, which means that even when the $$\bar y$$ is far enough from zero the soft-thresholded estimator is differentiated from the $$\bar y$$. However, the $$L_0$$ penalized estimator is exactly equivalent to the $$\bar y$$ when $$\vert\bar y \vert\geq(\lambda/n)^{1/2}$$.
  
 
  In the previous section, I mentioned that the $$L_0$$ and $$L_1$$ penalized estimators are sparse estimators, but the $$L_2$$ penalized estimator is not. The sparsity is useful when we have to consider model selection problems, since in many settings a sparsity pattern of the parameters determines a model, for example in linear regression models the zero regression parameters indicate that the corresponding independent variables are irrelavant to the response in the regression model. Then, natural question is "**Which one is better among the $$L_0$$ and $$L_1$$ penalized estimators?**" 
