--- a/_posts/2016-07-02-120519.markdown
+++ b/_posts/2016-07-02-120519.markdown
@@ -61,24 +61,24 @@ To help the understanding, I attached Figure 1 that illustrates the above estima
 
 ![look at me](/assets/penalty2.pdf)
 
- It is clear that the $$L_2$$ penalized estimator (right) is not a sparse estimator, which could result in an exactly zero estimated value, since  the estimator $$\theta_{L_2}$$ is always non-zero unless the $$\bar y$$ is exactly zero. On the other hand, the $$L_0$$ (left) and $$L_1$$ (middle) penalized estimators are sparse in the sense that the resulting estimators could be exactly zero when the $$\vert \bar y \vert$$ is small enough. The $$L_0$$ penalized estimator is called a **hard-thresholding** estimator, since the estimated value keeps the $$\bar y$$, if the $$\vert\bar y\vert$$ is larger than a specificc threshold $$\lambda/n$$, and it becomes exactly zero, otherwise. One important feature of the hard-thresholding estimator is that the solution function is not continuous, and you can see the gap on the function in Figure 1 (left), at $$-(\lambda/n)^{1/2}$$ and $$(\lambda/n)^{1/2}$$. On the other hand, the $$L_1$$ estimator is called  **soft-thresholding**, and it is different from the $$L_0$$ estimator (hard-thresholded) in a sense that there always exists a bias of the estimator, which means that even when the $$\bar y$$ is far enough from zero the soft-thresholded estimator is differentiated from the $$\bar y$$. However, the $$L_0$$ penalized estimator is exactly equivalent to the $$\bar y$$ when $$\vert\bar y \vert\geq(\lambda/n)^{1/2}$$.
+ It is clear that the $$L_2$$ penalized estimator (right) is not a sparse estimator, which could result in an exactly zero estimated value, since  the estimator $$\theta_{L_2}$$ is always non-zero unless the $$\bar y$$ is exactly zero. On the other hand, the $$L_0$$ (left) and $$L_1$$ (middle) penalized estimators are sparse in the sense that the resulting estimators could be exactly zero when the $$\vert \bar y \vert$$ is small enough. The $$L_0$$ penalized estimator is called a **hard-thresholding** estimator, since the estimated value keeps the $$\bar y$$, if the $$\vert\bar y\vert$$ is larger than a specific threshold $$\lambda/n$$, and it becomes exactly zero, otherwise. One important feature of the hard-thresholding estimator is that the solution function is not continuous, and you can see the gap on the function in Figure 1 (left), at $$-(\lambda/n)^{1/2}$$ and $$(\lambda/n)^{1/2}$$. On the other hand, the $$L_1$$ estimator is called  **soft-thresholding**, and it is different from the $$L_0$$ estimator (hard-thresholded) in a sense that there always exists a bias of the estimator, which means that even when the $$\bar y$$ is far enough from zero the soft-thresholded estimator is differentiated from the $$\bar y$$. However, the $$L_0$$ penalized estimator is exactly equivalent to the $$\bar y$$ when $$\vert\bar y \vert\geq(\lambda/n)^{1/2}$$.
  
 
- In the previous section, I mentioned that the $$L_0$$ and $$L_1$$ penalized estimators are sparse estimators, but the $$L_2$$ penalized estimator is not. The sparsity is useful when we have to consider model selection problems, since in many settings a sparsity pattern of the parameters determines a model, for example in linear regression models the zero regression parameters indicate that the corresponding independent variables are irrelavant to the response in the regression model. Then, natural question is "**Which one is better among the $$L_0$$ and $$L_1$$ penalized estimators?**" 
+ In the previous section, I mentioned that the $$L_0$$ and $$L_1$$ penalized estimators are sparse estimators, but that the $$L_2$$ penalized estimator is not. The sparsity is useful when we have to consider model selection problems, since in many settings a sparsity pattern of the parameters determines a model, for example in linear regression models the zero regression parameters indicate that the corresponding independent variables are irrelavant to the response in the regression model. Then, natural question is "**Which one is better between the $$L_0$$ and $$L_1$$ penalized estimators?**" 
  
  *My answer is that the $$L_0$$ is better than the $$L_1$$, if it's computationally possible.*   
   
- By choosing appropriate rate of $$\lambda$$, the $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties, which means that the estimator achieves the same asymptotic behavior with that of the oracle estimator that is the estimator under the true sparsity pattern is known: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [this slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf), while the $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is biased. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is so-called a NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only guarantee the global minimizer, but also can be solved by a rich amount of reliable optimization algorithms, for example [the coordinate descent algorithms](https://arxiv.org/pdf/0803.3876.pdf), [the ADMM](http://arxiv.org/pdf/1208.3922v3.pdf), [the proximal algorithms](https://web.stanford.edu/~boyd/papers/pdf/prox_algs.pdf), and etc. For linear regression models with $$L_1$$ penalty (LASSO), [the Least Angle RegreSsion (LARS)](https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf) algorithm provides a very fast and scalable computation. The idea is that the authors captured he similarity between the forward selection and LASSO, and they showed that the forward selection can be used to approximate the LASSO solution.
+ By choosing an appropriate rate of $$\lambda$$, the $$L_0$$ penalized estimator enjoys some desirable properties such as the oracle properties, which means that the estimator achieves the same asymptotic behavior with that of the oracle estimator which is the estimator under the true sparsity pattern: [Yongdai Kim](http://oldstat.snu.ac.kr/ydkim/)'s great explanation of this concept is in [these slides](https://www.birs.ca/workshops/2011/11w5051/files/12_yongdai_kim_on_weak_and_strong_oracle_property.pdf). The $$L_1$$ estimator fails to achieve this in linear model settings, since the $$L_1$$ penalized estimator is biased. However, when we consider a large number of  parameters, sometimes larger than the sample size, it is computationally very demanding to find the solution of the $$L_0$$ penalized objective function; it is so-called a NP-hard problem. On the other hand, the $$L_1$$ penalty function $$\vert\theta\vert$$ is convex for multi-dimensional $$\theta \in \mathbb{R}^d$$ for some large positive integer $$d$$, the resulting optimization is also convex when the $$-2\times \log L(y\mid \theta)$$ is convex. Convex optimizations not only guarantee the global minimizer, but also can be solved by a rich amount of reliable optimization algorithms, for example [the coordinate descent algorithms](https://arxiv.org/pdf/0803.3876.pdf), [the ADMM](http://arxiv.org/pdf/1208.3922v3.pdf), [the proximal algorithms](https://web.stanford.edu/~boyd/papers/pdf/prox_algs.pdf), and, etc. For linear regression models with $$L_1$$ penalty (LASSO), [the Least Angle RegreSsion (LARS)](https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf) algorithm provides a very fast and scalable computation. The idea is that the authors captured the similarity between the forward selection and LASSO, and they showed that the forward selection can be used to approximate the LASSO solution.
  I will discuss the details in following posts.    
  
  
 #### $$L_2$$ penalties are still useful in many settings. 
 
-During the late 1950s,  statisticians got shocked by the introduction of an estimator called [James-Stein (JS) estimator](https://en.m.wikipedia.org/wiki/James–Stein_estimator). The reason was that under mild conditions the risk of the JS estimator is uniformly lower than that of the MLE in Gaussian sequence models, and it turned out that the JS estimator is a kind of $$L_2$$ penalized likelihood estimator. This is demonstrated again in [Efron and Morris (1973)](http://faculty.chicagobooth.edu/nicholas.polson/teaching/41900/efron-morris2.pdf) and  [Efron and Morris (1977)](http://statweb.stanford.edu/~ckirby/brad/other/Article1977.pdf), and  it can be interpreted as an empirical Bayes estimator with a legendary example about baseball batting rates.
+During the late 1950s,  statisticians were shocked by the introduction of an estimator called [the James-Stein (JS) estimator](https://en.m.wikipedia.org/wiki/James–Stein_estimator). The reason was that under mild conditions, the risk of the JS estimator is uniformly lower than that of the MLE in Gaussian sequence models, and it turned out that the JS estimator is a kind of $$L_2$$ penalized likelihood estimator. This is demonstrated again in [Efron and Morris (1973)](http://faculty.chicagobooth.edu/nicholas.polson/teaching/41900/efron-morris2.pdf) and  [Efron and Morris (1977)](http://statweb.stanford.edu/~ckirby/brad/other/Article1977.pdf), and  it can be interpreted as an empirical Bayes estimator with a legendary example about baseball batting rates.
 
 #### Conclusion
 
- I briefly talked about some penalized estimator, and simple discussion about pros and cons on the penalties. In the follwing post, I will discuss an interesting property of sparse estimators, which is called **super-efficiency**.  
+ I briefly talked about some penalized estimators, and addressed simple discussions about the pros and cons on the penalties. In the follwing post, I will discuss an interesting property of sparse estimators, which is called **super-efficiency**.  
 
 
  
