--- a/_posts/2016-06-14-213921.markdown
+++ b/_posts/2016-06-14-213921.markdown
@@ -51,21 +51,21 @@ $$\begin{eqnarray*}
 &&P\left[ \sum_{ {\bf k}:{\bf t} \subset {\bf k} }\frac{m_{\bf k}(y)\pi({\bf k})}{m_{\bf t}(y)\pi({\bf t})} >\epsilon \mid y \right]\\
 &\approx& P\left[ \sum_{ {\bf k} : {\bf t} \subsetneq {\bf k} }p^{-\lambda(|{\bf k}| -|{\bf t}| )}\tau^{-(|{\bf k}| -|{\bf t}| )}\left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2}\exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \} >\epsilon \mid y \right]\\
 &=&  P\left[ \sum_{d=1}^{ p-| {\bf t} | } \sum_{ {\bf k} : {\bf t} \subsetneq {\bf k} \& | {\bf t} \setminus {\bf k} | = d } p^{-\lambda d}\tau^{-d}\left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \} >\epsilon \mid y \right]\\
- &\leq& \sum_{ d=1 }^{ p-| {\bf t} | } P\left[  \sum_{ {\bf k} : {\bf t} \subset{\bf k} \& | {\bf k} \setminus {\bf t} | = d } p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right], 
+ &\leq& \sum_{ d=1 }^{ p-| {\bf t} | } P\left[  \sum_{ {\bf k} : {\bf t} \subsetneq{\bf k} \& | {\bf k} \setminus {\bf t} | = d } p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right], 
  \end{eqnarray*} 
  $$
 
 where $$P_{\bf k}$$ is the projection matrix of $$X_{\bf k}$$, and $${\bf k} \setminus {\bf t}$$ is the model $${\bf k}$$ without variable in $${\bf t}$$. The proof will be completed, if we can show that 
 
 $$
-P\left[  \sum_{ {\bf k} : {\bf t} \subset{\bf k} \& | {\bf k} \setminus {\bf t} | = d } p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right] =  o_p(p^{-1}).
+P\left[  \sum_{ {\bf k} : {\bf t} \subsetneq{\bf k} \& | {\bf k} \setminus {\bf t} | = d } p^{-\lambda d}\tau^{-d} \left\{\frac{X_{\bf k}^TX_{\bf k}+1/\tau^2I}{X_{\bf t}^TX_{\bf t}+1/\tau^2I}\right\}^{-1/2} \exp\{y^T(P_{\bf k}-P_{\bf t})y/(2\sigma^2) \}  > \epsilon/(p-|{\bf t}|) \mid y \right] =  o_p(p^{-1}).
 $$
 
 Under some eigenvalue conditions on the gram matrix $$X_{\bf k}^TX_{\bf k}$$ for any arbitrary model $${\bf k}$$, the ratio of the determinants has a polynomial rate of $$n$$, which does not influence much under high-dimensional settings where $$p$$ increases much faster than $$n$$, so we ignore the term. Also, as $$y^T(P_{\bf k}-P_{\bf t})y/\sigma^2 \sim \chi_{ \vert {\bf k} \vert -  \vert {\bf t} \vert }^2$$ when $${ {\bf t} \subset {\bf k} }$$, the resulting quantity can be expressed as
  
  
 $$\begin{eqnarray*}
-&& P\left[  \sum_{ {\bf k} : {\bf t} \subset {\bf k} \& | {\bf t} \setminus {\bf k} | = d } p^{-\lambda d}\tau^{-d} \exp\{y^T(P_{ \bf k}-P_{ \bf t })y/(2\sigma^2) \}  > \epsilon/(p-|{ \bf t } | ) \mid y \right]\\
+&& P\left[  \sum_{ {\bf k} : {\bf t} \subsetneq {\bf k} \& | {\bf t} \setminus {\bf k} | = d } p^{-\lambda d}\tau^{-d} \exp\{y^T(P_{ \bf k}-P_{ \bf t })y/(2\sigma^2) \}  > \epsilon/(p-|{ \bf t } | ) \mid y \right]\\
   &\leq&  { p - | { \bf t } | \choose d } P\left[ p^{-\lambda d}\tau^{-d} \exp\{ W_d / 2 \}  > \epsilon{ p-| { \bf t } | \choose d }^{-1}  \right],
  \end{eqnarray*}
  $$
